# coding_challenges

./: LICENSE  README.md  challenge.cabal  stack.yaml
challenges/: BarnsleyFern.hs  MengerSponge.hs  PurpleRain.hs  Quad1.hs  Quad2.hs  SnakeGame.hs  SpaceInvaders.hs
challenges/barnsley-fern/: barnsley-fern.cabal
challenges/fractal-tree/: FractalTree.hs  fractal-tree.cabal
challenges/koch-snowflake/: Koch.hs  koch-snowflake.cabal
challenges/menger-sponge/: MengerSponge.hs  menger-sponge.cabal
challenges/planet-sim/: Part1.hs  Planets.hs  planet-sim.cabal
challenges/purple-rain/: purple-rain.cabal
challenges/quad-tree/: Quad3.hs  QuadTree.hs  quad-tree.cabal
challenges/snake-game/: snake-game.cabal
challenges/space-invaders/: Invaders.hs  SpaceInvaders.hs  space-invaders.cabal
challenges/star-field/: StarField.hs  star-field.cabal
lib/: Invaders.hs  QuadTree.hs
