name:                challenge
version:             0.1.0
license:             Apache-2.0
build-type:          Simple
cabal-version:       >=1.10

executable star-field
  hs-source-dirs:      challenges/
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             StarField.hs
  build-depends:       base,
                       gloss,
                       random

executable menger-sponge
  hs-source-dirs:      challenges/
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             MengerSponge.hs
  build-depends:       base,
                       sdl2,
                       OpenGL

executable snake-game
  hs-source-dirs:      challenges/
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             SnakeGame.hs
  build-depends:       base,
                       gloss,
                       random,
                       containers,
                       MonadRandom


executable barnsly-fern
  hs-source-dirs:      challenges/
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             BarnsleyFern.hs
  build-depends:       base,
                       gloss,
                       random,
                       MonadRandom