name:                challenge
version:             0.1.0
license:             Apache-2.0
build-type:          Simple
cabal-version:       >=1.10
data-files:      images/*.png

library
  hs-source-dirs: lib
  default-language: Haskell2010
  build-depends:    base
  exposed-modules: QuadTree

executable star-field
  hs-source-dirs:      challenges/
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             StarField.hs
  build-depends:       base,
                       gloss,
                       random

executable menger-sponge
  hs-source-dirs:      challenges/
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             MengerSponge.hs
  build-depends:       base,
                       sdl2,
                       OpenGL

executable snake-game
  hs-source-dirs:      challenges/
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             SnakeGame.hs
  build-depends:       base,
                       gloss,
                       random,
                       containers,
                       MonadRandom

executable purple-rain
  hs-source-dirs:      challenges/
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             PurpleRain.hs
  build-depends:       base,
                       gloss,
                       random

executable space-invaders
  hs-source-dirs:      challenges/
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             SpaceInvaders.hs
  other-modules:       Paths_challenge
  build-depends:       base,
                       gloss,
                       gloss-juicy ==0.2.2,
                       random,
                       containers,
                       MonadRandom
                       

executable quadtree-part1
  hs-source-dirs:      challenges/
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             Quad1.hs
  build-depends:       base,
                       challenge,
                       containers,
                       QuickCheck

executable quadtree-part2
  hs-source-dirs:      challenges/
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             Quad2.hs
  build-depends:       base,
                       challenge,
                       gloss,
                       random,
                       MonadRandom

executable quadtree-part3
  hs-source-dirs:      challenges/
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             Quad3.hs
  build-depends:       base,
                       challenge,
                       gloss,
                       random,
                       MonadRandom

executable barnsly-fern
  hs-source-dirs:      challenges/
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             BarnsleyFern.hs
  build-depends:       base,
                       gloss,
                       random,
                       MonadRandom