name:                planet-sim
version:             0.1.0
license:             Apache-2.0
build-type:          Simple
cabal-version:       >=1.10

executable planetsim-part1
  hs-source-dirs:      ./
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             Part1.hs
  other-modules:       Planets
  build-depends:       base,
                       gloss,
                       random
