name:                purple-rain
version:             0.1.0
license:             Apache-2.0
build-type:          Simple
cabal-version:       >=1.10


executable purple-rain
  hs-source-dirs:      ./
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             PurpleRain.hs
  build-depends:       base,
                       gloss,
                       random
