name:                quad-tree
version:             0.1.0
license:             Apache-2.0
build-type:          Simple
cabal-version:       >=1.10


executable quadtree-part1
  hs-source-dirs:      ./
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             Quad1.hs
  other-modules:       QuadTree
  build-depends:       base,
                       containers,
                       QuickCheck

executable quadtree-part2
  hs-source-dirs:      ./
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             Quad2.hs
  other-modules:       QuadTree
  build-depends:       base,
                       gloss,
                       random,
                       MonadRandom

executable quadtree-part3
  hs-source-dirs:      ./
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             Quad3.hs
  other-modules:       QuadTree
  build-depends:       base,
                       gloss,
                       random,
                       MonadRandom
