name:                space-invaders
version:             0.1.0
license:             Apache-2.0
build-type:          Simple
cabal-version:       >=1.10


executable space-invaders
  hs-source-dirs:      ./
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             SpaceInvaders.hs
  other-modules:       Invaders
  build-depends:       base,
                       gloss,
                       random,
                       containers,
                       MonadRandom
                      